# TritonGen

./: .env.example  .gitignore  README.md  _mlflow_demo.py  eval_external_baselines.py  eval_external_modal.py  mini_triton_parser.py  poster_hallazgo_principal_tritongen.docx  pyproject.toml  requirements.txt  run_external_baselines.py  run_external_modal.py
.contracts/: README.md  cluster1_generated_surface.md
audits/: agentic_transcript_v1_a0_5_preflight_report.md  agentic_transcript_v1_a1_prompt_core_report.md  agentic_transcript_v1_a2_c_loop_integration_report.md  agentic_transcript_v1_a3_p_loop_integration_report.md  agentic_transcript_v1_a4_p_to_c_isolation_report.md  agentic_transcript_v1_a5_analyzer_grouping_report.md  agentic_transcript_v1_a6_run_packet_gate_report.md  agentic_transcript_v1_spec_checkpoint_report.md  analyzer_pre_output_verification_audit.md  analyzer_reportability_blocker_audit.md  analyzer_scale_tier_reportability_fix_report.md  c1_c2_evaluation_surface_audit.md  c2_durable_result_writing_fix_report.md  c2_g_replay_manifest_and_metadata_fix_report.md  c2_generated_eval_level0_level1_fix_report.md  c2_replay_readiness_for_g_plus_c_from_g_n20_audit.md  c3_n20_metric_family_gated_packet_report.md  cluster1_eval_path_pre_n5_audit.md  cluster2_c_paper_n20_l4_report.md  cluster2_c_smoke_n1_report.md  cluster2_g_plus_c_paper_n20_l4_report.md  cluster2_g_plus_c_paper_n20_l4_run_report.md  cluster2_g_plus_c_readiness_audit.md  cluster2_g_plus_c_smoke_n1_report.md  cluster2_pre_smoke_audit.md  cluster3_implementation_plan_draft_report.md  (+164 more)
(+1552 files in other folders)
